=================
Changes for Crate
=================

Unreleased
==========

2015/12/07 0.52.4
=================

 - The ``jobs.keep_alive_timeout`` value can now be configured and the default
   has been changed to 0 (deactivated) from ``5m``

 - Updated crate-admin to 0.15.5 which includes following change:
 
   - fix: Unavailable dependency `angular-truncate` module caused blank 
     Admin UI. Switched to `angular-truncate-2` now.

2015/12/02 0.52.3
=================

 - Updated Crash to 0.14.3, which includes the following change:

   - Python2.6/2.7 output now prints unicode strings correctly when using
     csv output format

 - Updated crate-admin to 0.15.4 which includes following changes:

   - fix: column headers where not shown in result table on console page
     when two or more columns with the same name were selected

   - fix: charts are not correctly displayed in Microsoft Edge browser.

 - Fix: insert into a partitioned primary key column of type long
   could fail under some circumstances

 - Fix: missing characters when concatenating string under some
   rare circumstances

 - Internal optimization: Avoid writing partition values to the source.

 - Updated crate certificates in the ssl truststore.

 - Fixed an issue that could cause bulk update requests to fail if the
   ``bulkArgs`` contained only one item

2015/11/11 0.52.2
=================

 - Updated crate-admin to 0.15.3 which includes following changes:

   - fix: REPLICATED DATA at the overview page showed incorrect percentage of
     of replicated data when number of undereplicated records was higher than
     number of total records

 - Updated crash to 0.14.2 which contains following changes:

   - Fixed an assertion error that could occur under python2.7

2015/11/04 0.52.1
=================

 - Fix: clean up file descriptors in case of exceptions when retrieving blobs
   over the REST api

 - Fixed an issue that caused orphaned partitions with an remaining alias to